--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
                   </div>
                 </form>
-                <p class="mt-2 mb-0 text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
+                <p class="mt-2 mb-0 text-style">Пример: https://ru.hexlet.io/lessons.rss</p>
                 <p class="feedback m-0 position-absolute small text-danger"></p>
               </div>
             </div>
